# oxidator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  arrow_gpu.rs  botdef.rs  camera.rs  cube.rs  cube_gpu.rs  fake_texels.rs  frame.rs  framework.rs  game_state.rs  glsl.rs  glsl_compiler.rs  gpu.rs  group_behavior.rs  health_bar.rs  heightmap.rs  heightmap_editor.rs  heightmap_gpu.rs  heightmap_phy.rs  imgui_wgpu.rs  input_state.rs  main.rs  manager.rs  mobile.rs  moddef.rs  model.rs  model_gpu.rs  net_client.rs  net_server.rs  phy_state.rs  post_fx.rs  post_fxaa.rs  procedural_texels.rs  shader.frag  shader.vert  test.rs  unit.rs  utils.rs
src/app/: misc.rs  mod.rs  play.rs  render.rs
src/asset/: axis_debug.blend  axis_debug.blend1
src/asset/botdef/: building_example.json  unit_example.json
src/asset/map/map_example/: data.json
src/asset/tank/: tank.blend  tank.blend1  wheel.blend  wheel.blend1
src/client/: camera.rs  game_state.rs  heightmap_editor.rs  input_state.rs  misc.rs  mod.rs  play.rs  render.rs  uitool.rs  unit_editor.rs  unit_part_gpu.rs
src/frame_server/: mod.rs
src/gpu_obj/: arrow_gpu.rs  blit_texture.rs  explosion.rs  glsl.rs  glsl_compiler.rs  gpu.rs  health_bar.rs  heightmap_gpu.rs  heightmap_helper.rs  imgui_wgpu.rs  line.rs  mod.rs  model_gpu.rs  post_fx.rs  post_fxaa.rs  texture_view_bicopy.rs  trait_gpu.rs  unit_icon.rs  water.rs
src/shader/: arrow.frag  arrow.frag.spirv  arrow.vert  arrow.vert.spirv  blit_texture.frag  blit_texture.vert  cube_instanced.frag  cube_instanced.frag.spirv  cube_instanced.vert  cube_instanced.vert.spirv  explosion.frag  explosion.vert  health_bar.frag  health_bar.vert  heightmap.frag  heightmap.frag.spirv  heightmap.vert  heightmap.vert.spirv  imgui.frag  imgui.frag.spirv  imgui.vert  imgui.vert.spirv  line.frag  line.vert  post.frag  post.vert.spirv  post_bicopy.frag  post_fxaa.frag  post_fxaa.frag.spirv  post_ui.frag  post_ui.frag.spirv  unit_icon.frag  unit_icon.vert  water.frag  water.vert
src/shader/compiled/: arrow.frag.spirv  arrow.vert.spirv  blit_texture.frag.spirv  blit_texture.vert.spirv  cube_instanced.frag.spirv  cube_instanced.vert.spirv  explosion.frag.spirv  explosion.vert.spirv  health_bar.frag.spirv  health_bar.vert.spirv  heightmap.frag.spirv  heightmap.vert.spirv  imgui.frag.spirv  imgui.vert.spirv  line.frag.spirv  line.vert.spirv  post.vert.spirv  post_bicopy.frag.spirv  post_fxaa.frag.spirv  post_ui.frag.spirv  unit_icon.frag.spirv  unit_icon.vert.spirv  water.frag.spirv  water.vert.spirv
